<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            android:gravity="center_horizontal">

            <TextView
                style="@style/text_heading_normal"
                android:layout_width="match_parent"
                android:gravity="start"
                android:textSize="@dimen/text_normal_plus"
                android:text="@string/setting_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_50sdp">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/images" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/version"/>

            <TextView
                android:id="@+id/txtChangePassWord"
                style="@style/text_match_setting"
                android:text="@string/setting_change_password"
                app:drawableStartCompat="@drawable/ic_setting_change_password" />

            <TextView
                android:id="@+id/txtLanguage"
                style="@style/text_match_setting"
                android:text="@string/setting_language"
                app:drawableStartCompat="@drawable/ic_setting_language" />

            <TextView
                style="@style/text_match_setting"
                android:text="@string/setting_notification"
                app:drawableStartCompat="@drawable/ic_setting_notification" />

            <LinearLayout
                android:id="@+id/lnDarkMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/text_match_setting"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:text="@string/setting_dark_mode"
                    android:layout_gravity="center"
                    app:drawableStartCompat="@drawable/ic_setting_display"
                    app:drawableEndCompat="@null" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swDarkMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="@dimen/_10sdp"
                    app:drawableTint="?colorAccent"
                    android:thumb="@drawable/switch_thumb"
                    app:track="@drawable/switch_track"/>

            </LinearLayout>

            <TextView
                android:id="@+id/txtContact"
                style="@style/text_match_setting"
                android:text="@string/setting_contact_us"
                app:drawableStartCompat="@drawable/ic_setting_connect" />

            <TextView
                android:id="@+id/txtHelp"
                style="@style/text_match_setting"
                android:text="@string/setting_help"
                app:drawableStartCompat="@drawable/ic_setting_help" />

            <TextView
                android:id="@+id/txtAbout"
                style="@style/text_match_setting"
                android:text="@string/setting_about"
                app:drawableStartCompat="@drawable/ic_setting_about" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/txtLogout"
                style="@style/button_navigation"
                android:layout_marginTop="30dp"
                android:layout_gravity="bottom"
                android:text="@string/setting_log_out"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>