<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.htnguyen.ihealth.view.social.ChooseChallengeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background_grey">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_background_grey"
            android:padding="@dimen/_10sdp"
            tools:context=".view.social.ChooseChallengeActivity">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/ic_general_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                style="@style/text_normal"
                android:layout_gravity="center"
                android:text="@string/social_choose_challenge"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgBack" />

            <TextView
                android:id="@+id/textView6"
                style="@style/text_wrap_normal"
                android:text="@string/social_compete_create_a_group_challenge"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:background="@drawable/bg_white_four_corner_normal"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <TextView
                    android:id="@+id/txtFinishFirstTitle"
                    style="@style/text_normal"
                    android:layout_gravity="center"
                    android:text="@string/social_finish_first"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtFinishFirstContent"
                    style="@style/text_wrap_normal"
                    android:text="@string/social_set_a_goal_step"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtFinishFirstTitle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtFinishFirstContent">

                    <TextView
                        android:id="@+id/txtFirstPerson"
                        style="@style/text_wrap_normal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/social_person"
                        app:drawableTopCompat="@drawable/ic_challenge_person" />

                    <TextView
                        android:id="@+id/txtFirstTeam"
                        style="@style/text_wrap_normal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/social_team"
                        app:drawableTopCompat="@drawable/ic_challenge_team" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:background="@drawable/bg_white_four_corner_normal"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <TextView
                    android:id="@+id/txtGoFarthestTitle"
                    style="@style/text_normal"
                    android:layout_gravity="center"
                    android:text="@string/social_header_go_farthest"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtGoFarthestContent"
                    style="@style/text_wrap_normal"
                    android:text="@string/social_see_who_can_get"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtGoFarthestTitle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtGoFarthestContent">

                    <TextView
                        android:id="@+id/txtGoPerson"
                        style="@style/text_wrap_normal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/social_person"
                        app:drawableTopCompat="@drawable/ic_challenge_person" />

                    <TextView
                        android:id="@+id/txtGoTeam"
                        style="@style/text_wrap_normal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/social_team"
                        app:drawableTopCompat="@drawable/ic_challenge_team" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
